Fix visual bug: logout button too large on phone (forgor mobile style)

--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -25,6 +25,11 @@ $login-padding-inline: 3.5vw;
       font-size: $login-font-size;
       padding-inline: $login-padding-inline;
     }
+
+    &__logout {
+      width: $icon-size;
+      height: $icon-size;
+    }
   }
   .logo {
     width: $logo-size;
